@@ -6,8 +6,10 @@ import static uk.gov.hmcts.reform.iacasedocumentsapi.domain.entities.AsylumCaseD
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+
 import java.util.*;
 import java.util.stream.Collectors;
+
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 import uk.gov.hmcts.reform.iacasedocumentsapi.domain.DateProvider;
@@ -27,7 +29,6 @@ import uk.gov.hmcts.reform.iacasedocumentsapi.domain.service.FeatureToggler;
 import uk.gov.hmcts.reform.iacasedocumentsapi.infrastructure.clients.EmBundleRequestExecutor;
 import uk.gov.hmcts.reform.iacasedocumentsapi.infrastructure.enties.em.Bundle;
 
-
 @Component
 public class CustomiseHearingBundleHandler implements PreSubmitCallbackHandler<AsylumCase> {
     private static final String SUPPLIED_BY_RESPONDENT = "The respondent";
@@ -42,16 +43,14 @@ public class CustomiseHearingBundleHandler implements PreSubmitCallbackHandler<A
     private final ObjectMapper objectMapper;
     private final FeatureToggler featureToggler;
 
-    
-
     public CustomiseHearingBundleHandler(
-            @Value("${emBundler.url}") String emBundlerUrl,
-            @Value("${emBundler.stitch.async.uri}") String emBundlerStitchUri,
-            EmBundleRequestExecutor emBundleRequestExecutor,
-            Appender<DocumentWithMetadata> documentWithMetadataAppender,
-            DateProvider dateProvider,
-            ObjectMapper objectMapper,
-            FeatureToggler featureToggler
+        @Value("${emBundler.url}") String emBundlerUrl,
+        @Value("${emBundler.stitch.async.uri}") String emBundlerStitchUri,
+        EmBundleRequestExecutor emBundleRequestExecutor,
+        Appender<DocumentWithMetadata> documentWithMetadataAppender,
+        DateProvider dateProvider,
+        ObjectMapper objectMapper,
+        FeatureToggler featureToggler
     ) {
         this.emBundlerUrl = emBundlerUrl;
         this.emBundlerStitchUri = emBundlerStitchUri;
@@ -64,100 +63,106 @@ public class CustomiseHearingBundleHandler implements PreSubmitCallbackHandler<A
     }
 
     public boolean canHandle(
-            PreSubmitCallbackStage callbackStage,
-            Callback<AsylumCase> callback
+        PreSubmitCallbackStage callbackStage,
+        Callback<AsylumCase> callback
     ) {
         requireNonNull(callbackStage, "callbackStage must not be null");
         requireNonNull(callback, "callback must not be null");
 
         return callbackStage == PreSubmitCallbackStage.ABOUT_TO_SUBMIT
-                && callback.getEvent() == Event.CUSTOMISE_HEARING_BUNDLE;
+            && (callback.getEvent() == Event.CUSTOMISE_HEARING_BUNDLE
+            || callback.getEvent() == Event.GENERATE_UPDATED_HEARING_BUNDLE);
     }
 
     public PreSubmitCallbackResponse<AsylumCase> handle(
-            PreSubmitCallbackStage callbackStage,
-            Callback<AsylumCase> callback
+        PreSubmitCallbackStage callbackStage,
+        Callback<AsylumCase> callback
     ) {
         if (!canHandle(callbackStage, callback)) {
             throw new IllegalStateException("Cannot handle callback");
         }
 
         final AsylumCase asylumCase =
-                callback
-                        .getCaseDetails()
-                        .getCaseData();
+            callback
+                .getCaseDetails()
+                .getCaseData();
         asylumCase.clear(AsylumCaseDefinition.HMCTS);
         asylumCase.write(AsylumCaseDefinition.HMCTS, "[userImage:hmcts.png]");
         asylumCase.clear(AsylumCaseDefinition.CASE_BUNDLES);
 
 
         boolean isReheardCase = asylumCase.read(CASE_FLAG_SET_ASIDE_REHEARD_EXISTS, YesOrNo.class).map(flag -> flag.equals(YesOrNo.YES)).orElse(false)
-             && featureToggler.getValue("reheard-feature", false);
+            && featureToggler.getValue("reheard-feature", false);
         boolean isRemittedPath = asylumCase.read(SOURCE_OF_REMITTAL, String.class).isPresent();
 
         boolean isOrWasAda = asylumCase.read(SUITABILITY_REVIEW_DECISION).isPresent();
-        if (isReheardCase) {
+        boolean isUpdatedBundle = callback.getEvent().equals(Event.GENERATE_UPDATED_HEARING_BUNDLE);
+        if (isReheardCase || isUpdatedBundle) {
             //populate these collections to avoid error on the Stitching api
             initializeNewCollections(asylumCase);
-
-            asylumCase.write(AsylumCaseDefinition.BUNDLE_CONFIGURATION, isRemittedPath ? "iac-remitted-reheard-hearing-bundle-config.yaml" : "iac-reheard-hearing-bundle-config.yaml");
+        }
+        String bundle;
+        if (isReheardCase) {
+            bundle = isRemittedPath ? "iac-remitted-reheard-hearing-bundle-config.yaml" : "iac-reheard-hearing-bundle-config.yaml";
+        } else if (isUpdatedBundle) {
+            bundle = isOrWasAda ? "iac-updated-hearing-bundle-inc-tribunal-config.yaml" : "iac-updated-hearing-bundle-config.yaml";
         } else {
-            asylumCase.write(AsylumCaseDefinition.BUNDLE_CONFIGURATION,
-                    isOrWasAda ? "iac-hearing-bundle-inc-tribunal-config.yaml" : "iac-hearing-bundle-config.yaml");
+            bundle = isOrWasAda ? "iac-hearing-bundle-inc-tribunal-config.yaml" : "iac-hearing-bundle-config.yaml";
         }
 
+        asylumCase.write(AsylumCaseDefinition.BUNDLE_CONFIGURATION, bundle);
         asylumCase.write(AsylumCaseDefinition.BUNDLE_FILE_NAME_PREFIX, getBundlePrefix(asylumCase));
 
         //deep copy the case
         AsylumCase asylumCaseCopy;
         try {
             asylumCaseCopy = objectMapper
-                    .readValue(objectMapper.writeValueAsString(asylumCase), AsylumCase.class);
+                .readValue(objectMapper.writeValueAsString(asylumCase), AsylumCase.class);
         } catch (JsonProcessingException e) {
             throw new IllegalStateException("Cannot make a deep copy of the case");
         }
 
-        prepareDocuments(getMappingFields(isReheardCase, isRemittedPath, isOrWasAda),asylumCaseCopy);
+        prepareDocuments(getMappingFields(isReheardCase, isRemittedPath, isOrWasAda, isUpdatedBundle), asylumCaseCopy);
         if (isReheardCase) {
-            prepareDocuments(getMappingFieldsForAdditionalEvidenceDocuments(),asylumCaseCopy);
+            prepareDocuments(getMappingFieldsForAdditionalEvidenceDocuments(), asylumCaseCopy);
         }
 
         final PreSubmitCallbackResponse<AsylumCase> response = emBundleRequestExecutor.post(
-                new Callback<>(
-                        new CaseDetails<>(
-                                callback.getCaseDetails().getId(),
-                                callback.getCaseDetails().getJurisdiction(),
-                                callback.getCaseDetails().getState(),
-                                asylumCaseCopy,
-                                callback.getCaseDetails().getCreatedDate()
-                        ),
-                        callback.getCaseDetailsBefore(),
-                        callback.getEvent()
+            new Callback<>(
+                new CaseDetails<>(
+                    callback.getCaseDetails().getId(),
+                    callback.getCaseDetails().getJurisdiction(),
+                    callback.getCaseDetails().getState(),
+                    asylumCaseCopy,
+                    callback.getCaseDetails().getCreatedDate()
                 ),
-                emBundlerUrl + emBundlerStitchUri);
+                callback.getCaseDetailsBefore(),
+                callback.getEvent()
+            ),
+            emBundlerUrl + emBundlerStitchUri);
 
         final AsylumCase responseData = response.getData();
 
-        restoreCollections(asylumCase, asylumCaseCopy,isReheardCase);
+        restoreCollections(asylumCase, asylumCaseCopy, isReheardCase);
 
-        restoreAddendumEvidence(asylumCase, asylumCaseCopy,isReheardCase);
+        restoreAddendumEvidence(asylumCase, asylumCaseCopy, isReheardCase, isUpdatedBundle);
 
         restoreRemittalDocumentsInCollections(asylumCase, asylumCaseCopy, isRemittedPath);
-        //for cases which progressed to finalBundling pre set-aside release,
+        // for cases which progressed to finalBundling pre set-aside release,
         // we want that all the documents should be restored in the collection field
         restoreReheardDocumentsInCollections(asylumCase, asylumCaseCopy, isRemittedPath
             ? LATEST_REHEARD_HEARING_DOCUMENTS : REHEARD_HEARING_DOCUMENTS, REHEARD_HEARING_DOCUMENTS_COLLECTION);
         restoreReheardDocumentsInCollections(asylumCase, asylumCaseCopy,
             LATEST_DECISION_AND_REASONS_DOCUMENTS, REHEARD_DECISION_REASONS_COLLECTION);
-        
+
         Optional<List<IdValue<Bundle>>> maybeCaseBundles = responseData.read(AsylumCaseDefinition.CASE_BUNDLES);
         asylumCase.write(AsylumCaseDefinition.CASE_BUNDLES, maybeCaseBundles);
 
         final List<Bundle> caseBundles = maybeCaseBundles
-                .orElseThrow(() -> new IllegalStateException("caseBundle is not present"))
-                .stream()
-                .map(IdValue::getValue)
-                .collect(Collectors.toList());
+            .orElseThrow(() -> new IllegalStateException("caseBundle is not present"))
+            .stream()
+            .map(IdValue::getValue)
+            .toList();
 
         if (caseBundles.size() != 1) {
             throw new IllegalStateException("case bundles size is not 1 and is : " + caseBundles.size());
@@ -172,38 +177,38 @@ public class CustomiseHearingBundleHandler implements PreSubmitCallbackHandler<A
     }
 
     void initializeNewCollections(AsylumCase asylumCase) {
-        if (!asylumCase.read(APPELLANT_ADDENDUM_EVIDENCE_DOCS).isPresent()) {
+        if (asylumCase.read(APPELLANT_ADDENDUM_EVIDENCE_DOCS).isEmpty()) {
             asylumCase.write(APPELLANT_ADDENDUM_EVIDENCE_DOCS, emptyList());
         }
 
-        if (!asylumCase.read(RESPONDENT_ADDENDUM_EVIDENCE_DOCS).isPresent()) {
+        if (asylumCase.read(RESPONDENT_ADDENDUM_EVIDENCE_DOCS).isEmpty()) {
             asylumCase.write(RESPONDENT_ADDENDUM_EVIDENCE_DOCS, emptyList());
         }
 
-        if (!asylumCase.read(APP_ADDITIONAL_EVIDENCE_DOCS).isPresent()) {
+        if (asylumCase.read(APP_ADDITIONAL_EVIDENCE_DOCS).isEmpty()) {
             asylumCase.write(APP_ADDITIONAL_EVIDENCE_DOCS, emptyList());
         }
 
-        if (!asylumCase.read(RESP_ADDITIONAL_EVIDENCE_DOCS).isPresent()) {
+        if (asylumCase.read(RESP_ADDITIONAL_EVIDENCE_DOCS).isEmpty()) {
             asylumCase.write(RESP_ADDITIONAL_EVIDENCE_DOCS, emptyList());
         }
 
-        if (!asylumCase.read(LATEST_REMITTAL_DOCUMENTS).isPresent()) {
+        if (asylumCase.read(LATEST_REMITTAL_DOCUMENTS).isEmpty()) {
             asylumCase.write(LATEST_REMITTAL_DOCUMENTS, emptyList());
         }
 
-        if (!asylumCase.read(LATEST_REHEARD_HEARING_DOCUMENTS).isPresent()) {
+        if (asylumCase.read(LATEST_REHEARD_HEARING_DOCUMENTS).isEmpty()) {
             asylumCase.write(LATEST_REHEARD_HEARING_DOCUMENTS, emptyList());
         }
 
-        if (!asylumCase.read(LATEST_DECISION_AND_REASONS_DOCUMENTS).isPresent()) {
+        if (asylumCase.read(LATEST_DECISION_AND_REASONS_DOCUMENTS).isEmpty()) {
             asylumCase.write(LATEST_DECISION_AND_REASONS_DOCUMENTS, emptyList());
         }
     }
 
     Optional<IdValue<DocumentWithMetadata>> isDocumentWithDescriptionPresent(
-            List<IdValue<DocumentWithMetadata>> idValueList,
-            IdValue<DocumentWithDescription> documentWithDescription
+        List<IdValue<DocumentWithMetadata>> idValueList,
+        IdValue<DocumentWithDescription> documentWithDescription
     ) {
 
         IdValue<DocumentWithMetadata> documentWithMetadataIdValue = null;
@@ -219,8 +224,8 @@ public class CustomiseHearingBundleHandler implements PreSubmitCallbackHandler<A
         return Optional.ofNullable(documentWithMetadataIdValue);
     }
 
-    private void restoreAddendumEvidence(AsylumCase asylumCase, AsylumCase asylumCaseBefore, boolean isReheardCase) {
-        if (!isReheardCase) {
+    private void restoreAddendumEvidence(AsylumCase asylumCase, AsylumCase asylumCaseBefore, boolean isReheardCase, boolean isUpdatedBundle) {
+        if (!isReheardCase && !isUpdatedBundle) {
             return;
         }
 
@@ -239,7 +244,7 @@ public class CustomiseHearingBundleHandler implements PreSubmitCallbackHandler<A
             .stream()
             .filter(document -> document.getValue().getSuppliedBy().equals(SUPPLIED_BY_APPELLANT))
             .filter(document -> !contains(currentAppellantAddendumEvidenceDocs.orElse(emptyList()), document))
-            .collect(Collectors.toList());
+            .toList();
 
         List<IdValue<DocumentWithMetadata>> allAppellantDocuments = currentAppellantAddendumEvidenceDocs.orElse(emptyList());
 
@@ -251,7 +256,7 @@ public class CustomiseHearingBundleHandler implements PreSubmitCallbackHandler<A
             .stream()
             .filter(document -> document.getValue().getSuppliedBy().equals(SUPPLIED_BY_RESPONDENT))
             .filter(document -> !contains(currentRespondentAddendumEvidenceDocs.orElse(emptyList()), document))
-            .collect(Collectors.toList());
+            .toList();
 
         List<IdValue<DocumentWithMetadata>> allRespondentDocuments = currentRespondentAddendumEvidenceDocs.orElse(emptyList());
         for (IdValue<DocumentWithMetadata> documentWithMetadata : missingRespondentDocuments) {
@@ -276,9 +281,9 @@ public class CustomiseHearingBundleHandler implements PreSubmitCallbackHandler<A
 
 
     private void restoreCollections(
-            AsylumCase asylumCase,
-            AsylumCase asylumCaseBefore,
-            boolean isReheardCase
+        AsylumCase asylumCase,
+        AsylumCase asylumCaseBefore,
+        boolean isReheardCase
     ) {
         boolean isOrWasAda = asylumCase.read(SUITABILITY_REVIEW_DECISION).isPresent();
         getFieldDefinitions(isReheardCase, isOrWasAda).forEach(field -> {
@@ -292,9 +297,9 @@ public class CustomiseHearingBundleHandler implements PreSubmitCallbackHandler<A
             }
             //filter any document missing from the current list of document
             List<IdValue<DocumentWithMetadata>> missingDocuments = beforeDocuments
-                    .stream()
-                    .filter(document -> !contains(currentIdValues.orElse(emptyList()), document))
-                    .collect(Collectors.toList());
+                .stream()
+                .filter(document -> !contains(currentIdValues.orElse(emptyList()), document))
+                .toList();
 
             List<IdValue<DocumentWithMetadata>> allDocuments = currentIdValues.orElse(emptyList());
             for (IdValue<DocumentWithMetadata> documentWithMetadata : missingDocuments) {
@@ -357,7 +362,7 @@ public class CustomiseHearingBundleHandler implements PreSubmitCallbackHandler<A
         //Remove the remittal decision document (Identifying as the decision document is renamed while storing with certain keywords)
         List<IdValue<DocumentWithMetadata>> filteredList = currentRemittalDocuments.stream()
             .filter(document -> !document.getValue().getDocument().getDocumentFilename().contains("-Decision-to-remit.pdf"))
-                .collect(Collectors.toList());
+            .collect(Collectors.toList());
 
         //Changed the documents in the latest RemittalDocs object
         beforeRemittalDocuments.setOtherRemittalDocs(filteredList);
@@ -370,17 +375,18 @@ public class CustomiseHearingBundleHandler implements PreSubmitCallbackHandler<A
         List<IdValue<DocumentWithMetadata>> missingDocuments = existingList
             .stream()
             .filter(document -> !contains(finalCurrentList, document))
-            .collect(Collectors.toList());
+            .toList();
 
         for (IdValue<DocumentWithMetadata> documentWithMetadata : missingDocuments) {
             currentList = documentWithMetadataAppender.append(documentWithMetadata.getValue(), currentList);
         }
+        restoreDocumentMetaData(currentList, existingList);
         return currentList;
     }
 
     boolean contains(
-            List<IdValue<DocumentWithMetadata>> existingDocuments,
-            IdValue<DocumentWithMetadata> documentWithMetadata
+        List<IdValue<DocumentWithMetadata>> existingDocuments,
+        IdValue<DocumentWithMetadata> documentWithMetadata
     ) {
 
         boolean found = false;
@@ -396,22 +402,63 @@ public class CustomiseHearingBundleHandler implements PreSubmitCallbackHandler<A
         return found;
     }
 
+    private IdValue<DocumentWithMetadata> getExistingDocument(
+        List<IdValue<DocumentWithMetadata>> existingDocuments,
+        IdValue<DocumentWithMetadata> documentWithMetadata
+    ) {
+        for (IdValue<DocumentWithMetadata> doc : existingDocuments) {
+            Document legalDocument = doc.getValue().getDocument();
+            Document document = documentWithMetadata.getValue().getDocument();
+            if (legalDocument.getDocumentBinaryUrl().equals(document.getDocumentBinaryUrl())) {
+                return doc;
+            }
+        }
+        return null;
+    }
+
+    private void restoreDocumentMetaData(List<IdValue<DocumentWithMetadata>> finalCurrentList, List<IdValue<DocumentWithMetadata>> existingList) {
+        for (int i = 0; i < finalCurrentList.size(); i++) {
+            IdValue<DocumentWithMetadata> currentDocument = finalCurrentList.get(i);
+
+            if (contains(existingList, currentDocument)) {
+                IdValue<DocumentWithMetadata> existingDocument = getExistingDocument(existingList, currentDocument);
+
+                if (existingDocument != null) {
+                    DocumentWithMetadata alteredDoc = new DocumentWithMetadata(
+                        currentDocument.getValue().getDocument(),
+                        currentDocument.getValue().getDescription(),
+                        existingDocument.getValue().getDateUploaded(),
+                        existingDocument.getValue().getTag(),
+                        existingDocument.getValue().getSuppliedBy(),
+                        existingDocument.getValue().getUploadedBy(),
+                        existingDocument.getValue().getDateTimeUploaded()
+                    );
+
+                    currentDocument = new IdValue<>(currentDocument.getId(), alteredDoc);
+
+                    finalCurrentList.set(i, currentDocument);
+                }
+            }
+        }
+    }
+
+
     private List<AsylumCaseDefinition> getFieldDefinitions(boolean isReheardCase, boolean isOrWasAda) {
         List<AsylumCaseDefinition> fieldDefnList;
         if (isReheardCase) {
             fieldDefnList = new ArrayList<>(Arrays.asList(
-                    ADDITIONAL_EVIDENCE_DOCUMENTS,
-                    RESPONDENT_DOCUMENTS,
-                    FTPA_APPELLANT_DOCUMENTS,
-                    FTPA_RESPONDENT_DOCUMENTS,
-                    FINAL_DECISION_AND_REASONS_DOCUMENTS
+                ADDITIONAL_EVIDENCE_DOCUMENTS,
+                RESPONDENT_DOCUMENTS,
+                FTPA_APPELLANT_DOCUMENTS,
+                FTPA_RESPONDENT_DOCUMENTS,
+                FINAL_DECISION_AND_REASONS_DOCUMENTS
             ));
         } else {
             fieldDefnList = new ArrayList<>(Arrays.asList(
-                    HEARING_DOCUMENTS,
-                    LEGAL_REPRESENTATIVE_DOCUMENTS,
-                    ADDITIONAL_EVIDENCE_DOCUMENTS,
-                    RESPONDENT_DOCUMENTS
+                HEARING_DOCUMENTS,
+                LEGAL_REPRESENTATIVE_DOCUMENTS,
+                ADDITIONAL_EVIDENCE_DOCUMENTS,
+                RESPONDENT_DOCUMENTS
             ));
             if (isOrWasAda) {
                 fieldDefnList.add(TRIBUNAL_DOCUMENTS);
@@ -420,11 +467,11 @@ public class CustomiseHearingBundleHandler implements PreSubmitCallbackHandler<A
         return fieldDefnList;
     }
 
-    private Map<AsylumCaseDefinition,AsylumCaseDefinition> getMappingFields(boolean isReheardCase, boolean isRemittedFeature, boolean isOrWasAda) {
+    private Map<AsylumCaseDefinition, AsylumCaseDefinition> getMappingFields(boolean isReheardCase, boolean isRemittedFeature, boolean isOrWasAda, boolean isUpdatedBundle) {
         Map<AsylumCaseDefinition, AsylumCaseDefinition> fieldMap;
         if (isReheardCase) {
             if (isRemittedFeature) {
-                return  Map.of(CUSTOM_FTPA_APPELLANT_DOCS, FTPA_APPELLANT_DOCUMENTS,
+                return Map.of(CUSTOM_FTPA_APPELLANT_DOCS, FTPA_APPELLANT_DOCUMENTS,
                     CUSTOM_FINAL_DECISION_AND_REASONS_DOCS, LATEST_DECISION_AND_REASONS_DOCUMENTS,
                     CUSTOM_REHEARD_HEARING_DOCS, LATEST_REHEARD_HEARING_DOCUMENTS,
                     CUSTOM_APP_ADDENDUM_EVIDENCE_DOCS, APPELLANT_ADDENDUM_EVIDENCE_DOCS,
@@ -432,39 +479,43 @@ public class CustomiseHearingBundleHandler implements PreSubmitCallbackHandler<A
                     CUSTOM_LATEST_REMITTAL_DOCS, LATEST_REMITTAL_DOCUMENTS
                 );
             }
-            fieldMap =  new HashMap<>(Map.of(CUSTOM_APP_ADDITIONAL_EVIDENCE_DOCS, APP_ADDITIONAL_EVIDENCE_DOCS,
+            return Map.of(CUSTOM_APP_ADDITIONAL_EVIDENCE_DOCS, APP_ADDITIONAL_EVIDENCE_DOCS,
                 CUSTOM_RESP_ADDITIONAL_EVIDENCE_DOCS, RESP_ADDITIONAL_EVIDENCE_DOCS,
-             CUSTOM_FTPA_APPELLANT_DOCS, FTPA_APPELLANT_DOCUMENTS,
-             CUSTOM_FTPA_RESPONDENT_DOCS, FTPA_RESPONDENT_DOCUMENTS,
-             CUSTOM_FINAL_DECISION_AND_REASONS_DOCS, FINAL_DECISION_AND_REASONS_DOCUMENTS,
-             CUSTOM_REHEARD_HEARING_DOCS, REHEARD_HEARING_DOCUMENTS,
-             CUSTOM_APP_ADDENDUM_EVIDENCE_DOCS, APPELLANT_ADDENDUM_EVIDENCE_DOCS,
-             CUSTOM_RESP_ADDENDUM_EVIDENCE_DOCS, RESPONDENT_ADDENDUM_EVIDENCE_DOCS));
+                CUSTOM_FTPA_APPELLANT_DOCS, FTPA_APPELLANT_DOCUMENTS,
+                CUSTOM_FTPA_RESPONDENT_DOCS, FTPA_RESPONDENT_DOCUMENTS,
+                CUSTOM_FINAL_DECISION_AND_REASONS_DOCS, FINAL_DECISION_AND_REASONS_DOCUMENTS,
+                CUSTOM_REHEARD_HEARING_DOCS, REHEARD_HEARING_DOCUMENTS,
+                CUSTOM_APP_ADDENDUM_EVIDENCE_DOCS, APPELLANT_ADDENDUM_EVIDENCE_DOCS,
+                CUSTOM_RESP_ADDENDUM_EVIDENCE_DOCS, RESPONDENT_ADDENDUM_EVIDENCE_DOCS);
         } else {
             fieldMap = new HashMap<>(Map.of(CUSTOM_HEARING_DOCUMENTS, HEARING_DOCUMENTS,
-             CUSTOM_LEGAL_REP_DOCUMENTS, LEGAL_REPRESENTATIVE_DOCUMENTS,
-             CUSTOM_ADDITIONAL_EVIDENCE_DOCUMENTS, ADDITIONAL_EVIDENCE_DOCUMENTS,
-             CUSTOM_RESPONDENT_DOCUMENTS, RESPONDENT_DOCUMENTS));
+                CUSTOM_LEGAL_REP_DOCUMENTS, LEGAL_REPRESENTATIVE_DOCUMENTS,
+                CUSTOM_ADDITIONAL_EVIDENCE_DOCUMENTS, ADDITIONAL_EVIDENCE_DOCUMENTS,
+                CUSTOM_RESPONDENT_DOCUMENTS, RESPONDENT_DOCUMENTS));
             if (isOrWasAda) {
                 fieldMap.put(CUSTOM_TRIBUNAL_DOCUMENTS, TRIBUNAL_DOCUMENTS);
+            }
+            if (isUpdatedBundle) {
+                fieldMap.put(CUSTOM_APP_ADDENDUM_EVIDENCE_DOCS, APPELLANT_ADDENDUM_EVIDENCE_DOCS);
+                fieldMap.put(CUSTOM_RESP_ADDENDUM_EVIDENCE_DOCS, RESPONDENT_ADDENDUM_EVIDENCE_DOCS);
             }
         }
         return fieldMap;
     }
 
-    private Map<AsylumCaseDefinition,AsylumCaseDefinition> getMappingFieldsForAdditionalEvidenceDocuments() {
-        return  Map.of(CUSTOM_APP_ADDITIONAL_EVIDENCE_DOCS, ADDITIONAL_EVIDENCE_DOCUMENTS,
+    private Map<AsylumCaseDefinition, AsylumCaseDefinition> getMappingFieldsForAdditionalEvidenceDocuments() {
+        return Map.of(CUSTOM_APP_ADDITIONAL_EVIDENCE_DOCS, ADDITIONAL_EVIDENCE_DOCUMENTS,
             CUSTOM_RESP_ADDITIONAL_EVIDENCE_DOCS, RESPONDENT_DOCUMENTS);
     }
 
     private List<IdValue<DocumentWithMetadata>> getIdValuesBefore(
-            AsylumCase asylumCaseBefore,
-            AsylumCaseDefinition fieldDefinition
+        AsylumCase asylumCaseBefore,
+        AsylumCaseDefinition fieldDefinition
     ) {
 
         if (asylumCaseBefore != null) {
             Optional<List<IdValue<DocumentWithMetadata>>> idValuesBeforeOptional = asylumCaseBefore
-                    .read(fieldDefinition);
+                .read(fieldDefinition);
             if (idValuesBeforeOptional.isPresent()) {
                 return idValuesBeforeOptional.get();
             }
@@ -476,25 +527,24 @@ public class CustomiseHearingBundleHandler implements PreSubmitCallbackHandler<A
     private String getBundlePrefix(AsylumCase asylumCase) {
 
         final String appealReferenceNumber =
-                asylumCase
-                        .read(AsylumCaseDefinition.APPEAL_REFERENCE_NUMBER, String.class)
-                        .orElseThrow(() -> new IllegalStateException("appealReferenceNumber is not present"));
+            asylumCase
+                .read(AsylumCaseDefinition.APPEAL_REFERENCE_NUMBER, String.class)
+                .orElseThrow(() -> new IllegalStateException("appealReferenceNumber is not present"));
 
         final String appellantFamilyName =
-                asylumCase
-                        .read(AsylumCaseDefinition.APPELLANT_FAMILY_NAME, String.class)
-                        .orElseThrow(() -> new IllegalStateException("appellantFamilyName is not present"));
+            asylumCase
+                .read(AsylumCaseDefinition.APPELLANT_FAMILY_NAME, String.class)
+                .orElseThrow(() -> new IllegalStateException("appellantFamilyName is not present"));
 
         return appealReferenceNumber.replace("/", " ")
-                + "-" + appellantFamilyName;
+            + "-" + appellantFamilyName;
     }
 
+    private void prepareDocuments(Map<AsylumCaseDefinition, AsylumCaseDefinition> mappingFields, AsylumCase asylumCase) {
 
-    private void prepareDocuments(Map<AsylumCaseDefinition,AsylumCaseDefinition> mappingFields,AsylumCase asylumCase) {
+        mappingFields.forEach((sourceField, targetField) -> {
 
-        mappingFields.forEach((sourceField,targetField) -> {
-
-            if (!asylumCase.read(sourceField).isPresent()) {
+            if (asylumCase.read(sourceField).isEmpty()) {
                 return;
             }
 
@@ -508,21 +558,27 @@ public class CustomiseHearingBundleHandler implements PreSubmitCallbackHandler<A
 
             List<IdValue<DocumentWithMetadata>> customDocuments = new ArrayList<>();
 
-            if (documents != null && documents.size() > 0) {
+            if (!documents.isEmpty()) {
 
                 for (IdValue<DocumentWithDescription> documentWithDescription : documents) {
-                    //if the any document is missing the tag, add the appropriate tag to it.
+                    //if the 'any document' is missing the tag, add the appropriate tag to it.
                     Optional<IdValue<DocumentWithMetadata>> maybeDocument = isDocumentWithDescriptionPresent(targetDocuments, documentWithDescription);
                     Document document = documentWithDescription.getValue().getDocument().orElseThrow(() -> new IllegalStateException(MISSING_DOCUMENT_EXCEPTION_MESSAGE));
 
                     DocumentWithMetadata newDocumentWithMetadata = null;
 
                     if (maybeDocument.isPresent()) {
-                        newDocumentWithMetadata = new DocumentWithMetadata(document,
-                            documentWithDescription.getValue().getDescription().orElse(""),
-                            dateProvider.now().toString(),
-                            maybeDocument.get().getValue().getTag(),
-                            "");
+                        DocumentTag maybeDocumentTag = maybeDocument.get().getValue().getTag();
+                        if (maybeDocumentTag != DocumentTag.HEARING_BUNDLE &&
+                            maybeDocumentTag != DocumentTag.UPDATED_HEARING_BUNDLE) {
+                            newDocumentWithMetadata = new DocumentWithMetadata(document,
+                                documentWithDescription.getValue().getDescription().orElse(""),
+                                maybeDocument.get().getValue().getDateUploaded(),
+                                maybeDocumentTag,
+                                maybeDocument.get().getValue().getSuppliedBy(),
+                                maybeDocument.get().getValue().getUploadedBy(),
+                                maybeDocument.get().getValue().getDateTimeUploaded());
+                        }
                     } else {
                         switch (sourceField) {
                             case CUSTOM_HEARING_DOCUMENTS:
@@ -530,14 +586,18 @@ public class CustomiseHearingBundleHandler implements PreSubmitCallbackHandler<A
                                     documentWithDescription.getValue().getDescription().orElse(""),
                                     dateProvider.now().toString(),
                                     DocumentTag.HEARING_NOTICE,
-                                    "");
+                                    "",
+                                    "",
+                                    String.valueOf(dateProvider.nowWithTime()));
                                 break;
                             case CUSTOM_REHEARD_HEARING_DOCS:
                                 newDocumentWithMetadata = new DocumentWithMetadata(document,
                                     documentWithDescription.getValue().getDescription().orElse(""),
                                     dateProvider.now().toString(),
                                     DocumentTag.REHEARD_HEARING_NOTICE,
-                                    "");
+                                    "",
+                                    "",
+                                    String.valueOf(dateProvider.nowWithTime()));
                                 break;
                             case CUSTOM_LEGAL_REP_DOCUMENTS:
                                 newDocumentWithMetadata = new DocumentWithMetadata(document,
@@ -617,7 +677,8 @@ public class CustomiseHearingBundleHandler implements PreSubmitCallbackHandler<A
                                     DocumentTag.REMITTAL_DECISION,
                                     "");
                                 break;
-                            default:break;
+                            default:
+                                break;
                         }
                     }
                     customDocuments = documentWithMetadataAppender.append(newDocumentWithMetadata, customDocuments);
